--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/old-webflow.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/old-webflow.css
@@ -33,7 +33,7 @@
     border-radius: 20px;
     background-color: #919191;
 }
-.card.research-card {
+.card.card-style1 {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
