--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -30,11 +30,29 @@ body {
   font-weight: 600;
   line-height: 2em;
 }
-
 .card-title {
   font-size: var(--h3);
   line-height: 3em;
   font-weight: 600;
+}
+.page-title {
+  font-size: var(--page-h1);
+  line-height: 3em;
+  font-weight: 600;
+}
+.section-title-line {
+  width: 170px;
+  height: 6px;
+  border-radius: 3px;
+  margin-bottom: 50px;
+}
+.label {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .icon {
@@ -42,28 +60,26 @@ body {
   height: 50px;
   object-fit: contain;
 }
-
-.page-title {
-  font-size: var(--page-h1);
-  line-height: 3em;
-  font-weight: 600;
+.card-icon {
+  width: 50px;
+  height: 50px;
+  margin: 0 30px;
+  align-self: flex-start;
+  flex-grow: 0;
 }
 
+.card {
+  border-radius: 6px;
+  box-shadow: 1px 1px 8px 0 #d9d9d9;
+}
 .card-text{
   font-size: var(--b3);
   margin-bottom: 25px;
 }
-
-.label {
-  text-transform: uppercase;
-  font-weight: 600;
-}
-
-.section-title-line {
-  width: 170px;
-  height: 6px;
-  border-radius: 3px;
-  margin-bottom: 50px;
+.card-style1 {
+  padding: 30px;
+  border: 2px solid #E7E7E7;
+  display: flex;
 }
 
 
@@ -93,17 +109,16 @@ body {
 }
 .even-wrapper{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
 }
-
+.even-wrapper > div {
+  width: 100%;
+}
 .hp-process-card-wrapper {
   margin: 0 10px;
   align-self: stretch;
   padding: 30px;
   border: 3px none #000;
   background-color: #fff;
-  box-shadow: 1px 1px 8px 0 #d9d9d9;
   display: flex;
   flex-direction: column;
 }
@@ -124,6 +139,12 @@ body {
 
 .space-above {
   margin-top: 30px;
+}
+.h-padding {
+  padding: 0 2%;
+}
+.v-padding {
+  padding: 2% 0;
 }
 
 /*variables and small things*/
@@ -177,6 +198,12 @@ body {
 }
 .bg-light-purple{
   background-color: #FAFAFD;
+}
+.bg-light-blue {
+  background-color: #F4FBFB;
+}
+.bg-white {
+  background-color: white;
 }
 .overflow-top {
   padding-top: 300px;
@@ -355,9 +382,8 @@ body {
   flex-shrink: 0;
 }
 .quote-bubble {
-  padding: 30px;
-  border-radius: 25px;
-  background: #F7F7FC;
+  padding: 2%;
+  border-radius: 6px;
   width: 100%;
 }
 .big-quote {
@@ -392,6 +418,22 @@ body {
   width: 30px;
 }
 
+/*arrow & textbox*/
+.arrow-text {
+  padding: 0 20px;
+}
+.space {
+  flex-grow: 1;
+}
+.hline {
+  align-self: center;
+  border: 1px solid #ddd;
+}
+.text-box {
+  background-image: url("../images/textbox.png");
+  background-size: 100% 100%;
+  padding: 3vw 20px 20px;
+}
 
 @media (max-width: 991px) {
   .button-solid {
@@ -647,7 +689,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
   }
-  .card.research-card {
+  .card.card-style1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -793,7 +835,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
   }
-  .card.research-card {
+  .card.card-style1 {
     padding-top: 10px;
     padding-right: 10px;
     padding-left: 10px;
