--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -140,14 +140,9 @@ body {
   justify-content: space-between;
   align-items: flex-start;
 }
-.flex-h.smaller-section {
-  padding: 30px 0;
+.smaller-section {
+  margin: 30px 0;
 }
-
-.no-padding.smaller-section {
-  padding: 0px 0;
-}
-
 .space-above {
   margin-top: 30px;
 }
@@ -306,6 +301,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 150px;
+  height: 50vw;
 }
 .banner .bg {
   position: absolute;
@@ -584,6 +580,7 @@ button:focus {outline:0;}
 /*arrow & textbox*/
 .arrow-text {
   padding: 0 20px;
+  color: var(--color-red);
 }
 .space {
   flex-grow: 1;
