--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -4,7 +4,7 @@ body {
   padding-right: 0%;
   padding-left: 0%;
   color: #333;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.8;
   font-family: 'Open Sans', sans-serif;
 }
@@ -494,6 +494,7 @@ button:focus {outline:0;}
   height:40px;
   color: #969696;
   text-align: center;
+  background-color: #00000000;
 }
 .tab-navbutton.active{
   color: #EE4266;
@@ -516,7 +517,8 @@ button:focus {outline:0;}
   display: flex;
 }
 .tab-content div{
-  flex-grow: 1;
+  width: 100%;
+  padding-right: 10px;
 }
 .tab-page ul {
   list-style: none; /* Remove default bullets */
