--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -439,9 +439,26 @@ body {
 
 /* slideshow */
 
+.slideshow-img-wrapper{
+  position: relative;
+  width: 100%;
+}
+.expand-icon{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  bottom: 40px;
+  right: 20px;
+  color: black;
+}
 .slideshow-img{
   width: 100%;
-  margin: 20px 0;
+  margin: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.slideshow-img:hover{
+  opacity: 0.7;
 }
 .slideshow-img.active{
   display: block;
@@ -480,6 +497,76 @@ body {
   margin: 0 30px;
 }
 
+/*image click expand*/
+
+
+/* The Modal (background) */
+#expanded-img-wrapper{
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  transition: all 0.5s linear;
+}
+
+/* Modal Content (image) */
+#expanded-img {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#expanded-img:hover {opacity: 0.7;}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+#expanded-img{
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.3s;
+  animation-name: zoom;
+  animation-duration: 0.3s;
+}
+
+
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)}
+  to {-webkit-transform: scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
+
 /*tabs*/
 
 button:focus {outline:0;}
@@ -512,6 +599,11 @@ button:focus {outline:0;}
   width: 100%;
   height: 310px;
   margin-bottom: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.tab-cover-image:hover{
+  opacity: 0.7;
 }
 .tab-content{
   display: flex;
