--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/variables.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/variables.css
@@ -39,4 +39,6 @@ body {
     --color-dark-blue: #2047AD;
     --color-purple: #9477D1;
     --color-light-purple: #9477D199;
+    --color-bg-light-purple: #9477D111;
+    --color-green: #21B7B7;
 }
