--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -1,5 +1,9 @@
 @import "variables.css";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding-right: 0%;
   padding-left: 0%;
@@ -9,6 +13,20 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.menu-button {
+  padding: 0 !important;
+  width: 25px;
+  height: 25px;
+  background-color: #222;
+}
+
+.navbar.homepage .menu-button {
+  background-color: white;
+}
+
+.tablet-phone {
+  display: none;
+}
 /*components*/
 .button-solid {
   padding: .5em;
@@ -49,6 +67,7 @@ body {
 .label {
   text-transform: uppercase;
   font-weight: 600;
+  margin-top: 10px;
 }
 
 .text-center {
@@ -63,7 +82,7 @@ body {
 .card-icon {
   width: 50px;
   height: 50px;
-  margin: 0 30px;
+  margin: 0 30px 0 10px;
   align-self: flex-start;
   flex-grow: 0;
 }
@@ -71,15 +90,18 @@ body {
 .card {
   border-radius: 6px;
   box-shadow: 1px 1px 8px 0 #d9d9d9;
+  background-color: white;
 }
 .card-text{
   font-size: var(--b3);
-  margin-bottom: 25px;
 }
 .card-style1 {
   padding: 30px;
   border: 2px solid #E7E7E7;
   display: flex;
+}
+.card-style1 > div {
+  width: 100%;
 }
 .card-title {
   font-size: var(--h3);
@@ -107,8 +129,9 @@ body {
 }
 
 .container {
-  width: 68vw;
-  max-width: 1100px;
+  width: 70vw;
+  margin-left: 5vw;
+  max-width: 1200px;
   /*min-width: 800px;*/
   display: flex;
   flex-direction: column;
@@ -125,7 +148,7 @@ body {
   width: 100%;
 }
 .hp-process-card-wrapper {
-  margin: 0 10px;
+  margin: 10px 10px;
   align-self: stretch;
   padding: 30px;
   border: 3px none #000;
@@ -165,6 +188,9 @@ body {
 .purple-text {
   color: var(--color-purple);
 }
+.green-text {
+  color: var(--color-green);
+}
 .grey-text {
   color: #888;
 }
@@ -199,6 +225,9 @@ body {
 }
 .blue-bg {
   background-color: var(--color-dark-blue);
+}
+.green-bg {
+  background-color: var(--color-green);
 }
 .purple-bg {
   background-color: var(--color-purple)
@@ -301,14 +330,14 @@ body {
   flex-direction: column;
   align-items: center;
   padding-top: 150px;
-  height: 35vw;
+  padding-bottom: 50px;
 }
 .banner .bg {
   position: absolute;
   top: 0;
-  width: 800px;
-  max-height: 600px;
-  max-width: 55%;
+  width: 45%;
+  max-width: 800px;
+  z-index: -2;
 }
 .banner .bg.left {
   left: 0;
@@ -317,19 +346,17 @@ body {
   right: 0;
 }
 .banner-img-homepage {
-  position: relative;
+  position: absolute;
   align-self: flex-end;
-  top: -60px;
   width: 400px;
+  margin-top: -250px;
 }
 .homepage-banner {
-  height: 450px;
   background-image: url('../images/homepage/0-banner-bg.png');
   background-size: cover;
   color: #fff;
 }
 .hp-banner-title {
-  z-index: 2;
   font-size: var(--page-h2);
   line-height: 2em;
   font-weight: 600;
@@ -399,11 +426,13 @@ body {
   height: 145px;
   justify-content: flex-start;
   flex-shrink: 0;
+  margin-bottom: 20px;
 }
 .quote-bubble {
   padding: 2%;
   border-radius: 6px;
   width: 100%;
+  background-color: var(--color-bg-light-purple);
 }
 .big-quote {
   font-style: italic;
@@ -560,13 +589,6 @@ body {
   to {transform:scale(1)}
 }
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
-}
-
 /*tabs*/
 
 button:focus {outline:0;}
@@ -597,7 +619,6 @@ button:focus {outline:0;}
 }
 .tab-cover-image{
   width: 100%;
-  height: 310px;
   margin-bottom: 50px;
   cursor: pointer;
   transition: 0.3s;
@@ -608,7 +629,7 @@ button:focus {outline:0;}
 .tab-content{
   display: flex;
 }
-.tab-content div{
+.tab-content > div{
   width: 100%;
   padding-right: 10px;
 }
@@ -698,674 +719,189 @@ button:focus {outline:0;}
   display: none;
 }
 
-
-@media (max-width: 1000px) {
-  
-  .banner.section {
-    height: 390px;
-  }
-
-  a:hover
-{
-  color: tomato;
+ul {
+  padding-left: 15px;
 }
 
-#menuToggle
-{
-  display: block;
-  position: relative;
-  top: 50px;
-  left: 50px;
-  
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-{
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
-
-  .nav-menu {
+@media (max-width: 991px) {
+  .desktop {
     display: none;
   }
-  .banner {
-    display: flex;
+
+  .tablet-phone-v {
     flex-direction: column;
-    align-items: center;
-    padding-top: 150px;
-    height: 5
   }
-  .banner .bg {
+
+  .tablet-phone {
+    display: block;
+  }
+
+  .banner-paragraph {
+    width: 100%;
+  }
+
+  .container {
+    width: 80vw;
+    margin-left: 0;
+  }
+
+  .flexblock-headshot {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+  }
+
+  .tab-content {
+    flex-direction: column;
+  }
+
+  .tab-content > div {
+    padding-right: 0;
+    padding-bottom: 20px;
+  }
+
+  .nav-menu {
     position: absolute;
     top: 0;
-    width: 800px;
-    max-height: 550px;
-    max-width: 55%;
+    left: 0;
+    flex-direction: column;
+    display: none;
+    width: 100%;
+    padding-top: 50px;
+    background-color: #fff;
+    z-index: -2;
+    box-shadow: 1px 1px 8px 0 #d9d9d9;
   }
+
+  .nav-menu > a {
+    padding-left: 50px;
+    line-height: 3em;
+  }
+
+  .nav-menu.show {
+    display: flex;
+  }
+
+  .navbar.homepage .nav-menu {
+    background-color: #5E215E;
+    box-shadow: none;
+  }
+
+  .button-solid {
+    width: fit-content;
+    padding: 0 2em;
+    align-self: flex-end;
+  }
+
+  .text-box {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
   .banner.section {
     padding-top: 100px;
-    /*display: block;*/
   }
-  .banner .bg.left {
+  .banner .bg {
     top: 0;
-    left: 0;
-    width: 30%;
+    width: 40%;
+    max-height: 350px;
     display: block;
   }
   .banner .bg.right {
-    top: 0;
     right: 0;
-    width: 30%;
-    display: block;
   }
-  
+  .banner .bg.left {
+    left: 0;
+  }
 
   .bg {
     width: 25%;
-  }
-
-  .inpage-nav {
-    display: none;
-  }
-
-  .section-title-line red-bg {
-    margin-bottom: 0px;
   }
 
   .smaller-section {
     margin-top: 0px;
   }
 
-  .section {
-    padding-top: 40px;
-    padding-bottom: 40px;
-  }
-
   .hline {
     display: none;
   }
 
-  .container {
-    background: none;
-  }
-
   .tab-navbar {
-    flex-direction: column;
+    flex-flow: wrap;
     border-bottom: 0px;
+    margin-bottom: 10px;
   }
 
-  .arrow-text {
-    display: none;
+  .tab-navbutton {
+    width: 50%;
+    flex-grow: 0;
   }
 
-  .arrow-text-ipad {
-    display: block;
-    padding: 0 20px;
-    padding-top: 20px;
-    color: var(--color-red);
+  .carousel {
+    padding: 20px 30px;
+    box-shadow: 1px 1px 8px 0 #d9d9d9;
+    background-color: white;
+  }
+
+  .tab-cover-image {
+    margin-bottom: 20px;
+  }
+
+  .card-style1 {
+    flex-direction: column;
   }
 
   .card-icon {
     display: none;
-  }
-
- .card-icon-ipad {
-    display: block;
-    padding-bottom: 15px;
-  }
-
-  .ipad-bin {
-    width: 50%;
-    margin: 10px;
-  }
-
-  .banner-paragraph {
-    width: 375px;
-    padding-top: 15px;
   }
 
   .button-solid {
     margin-top: 40px;
   }
+
   .hp-banner-paragraph {
     width: 100%;
   }
-  .banner-img-homepage {
-    display: none;
-  }
-  .container.noedge {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
 
-  .section-title {
-    font-size: 36px;
-  }
-  .page-title {
-    font-size: 32px;
-    line-height: 1em;
-  }
-  .shadow-title {
-    position: relative;
-    left: 0.5em;
-    top: -0.5em;
-    bottom: auto;
-    font-size: 48px;
-    line-height: 1em;
-  }
-  .normal-text {
-    width: 100%;
-    padding-bottom: 0px;
-    font-size: 1em;
-  }
-  .normal-text.halfway-paragraph {
-    font-size: 16px;
-  }
-  .img-banner {
-    position: absolute;
-  }
-  .container {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: center;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-  .flex-horizontal-container-right {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: left;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-  .emily-headshot {
-    height: 200px;
-  }
-  .text-descript {
-    margin-bottom: 10px;
-  }
-  .team-img {
-    position: absolute;
-  }
-  .shadow-title-right {
-    position: relative;
-    left: 0.5em;
-    top: -0.5em;
-    bottom: auto;
-    font-size: 48px;
-    line-height: 1em;
-  }
-  .section-title-right {
-    font-size: 32px;
-    line-height: 1em;
-  }
-  .normal-text-right {
-    width: 100%;
-    padding-bottom: 0px;
-    font-size: 1em;
-  }
-  .div-centered-h {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .div-centered-h.insights-item {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-  }
-  .image-9 {
-    z-index: -1;
-  }
-  .image-11 {
-    margin-top: 100px;
-  }
-  .tab-inpage {
-    padding-right: 10px;
-    padding-left: 10px;
-    font-size: 12px;
-  }
-  .body-3 {
-    font-size: 16px;
-  }
-  .div-block-2 {
-    max-width: 70%;
-  }
-  .image-right-gap {
-    height: auto;
-  }
-  .image-right-gap.larger-pic {
-    max-width: none;
-    margin-top: 0px;
-    margin-right: 0px;
-  }
-  .navbar {
-    color: #333;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 50px;
-  }
   .navbar.homepage {
     background-color: #ffffff22;
     color: white;
   }
-  .menu-button {
-    background-color: #fff;
-  }
-  .menu-button.w--open {
-    background-color: #000;
-  }
-
-  .nav-menu {
-    background-color: #fff;
-  }
-  .div-horizontal {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  .image-18 {
-    height: auto;
-    max-width: 100%;
-    margin-right: 0px;
-  }
 }
 
-@media (max-width: 767px) {
-  .hp-banner-paragraph {
-    width: 100%;
-  }
-  .banner-img-homepage {
-    display: none;
-  }
-  .container.noedge {
-    padding-right: 0%;
-    padding-left: 0%;
-  }
-
+@media (max-width: 479px) {
   .page-title {
-    font-size: 32px;
-  }
-  .shadow-title {
-    position: relative;
-    left: 0.5em;
-    top: -0.5em;
-    bottom: auto;
-    font-size: 48px;
-    line-height: 1em;
-  }
-  .normal-text {
-    max-width: none;
-    font-size: 1em;
-  }
-  .normal-text.page-banner-text {
-    max-width: none;
-  }
-  .normal-text.halfway-paragraph {
-    width: auto;
-    max-width: none;
-    font-size: 16px;
-  }
-  .img-banner {
-    max-height: none;
-    max-width: 40%;
-  }
-  .img-banner.about-banner-pic {
-    max-width: 80%;
-  }
-
-  .container {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: center;
-  }
-  .flex-horizontal-container-right {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: left;
-  }
-  .flex-horizontal-container-spaced {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-  }
-  .team-img {
-    position: relative;
-    max-height: none;
-    max-width: 40%;
-  }
-  .shadow-title-right {
-    position: relative;
-    left: 0.5em;
-    top: -0.5em;
-    bottom: auto;
-    font-size: 48px;
-    line-height: 1em;
-  }
-  .section-title-right {
-    font-size: 32px;
-  }
-  .normal-text-right {
-    max-width: none;
-    font-size: 1em;
-  }
-  .about-banner-copy {
-    padding-top: 120px;
-  }
-  .div-centered-h.insights-item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-  .card.card-style1 {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: stretch;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    font-size: 1em;
-    line-height: 1em;
-  }
-  .card-block {
-    width: auto;
-    margin-right: 0px;
-    margin-bottom: 40px;
-    margin-left: 0px;
+    font-size: 40px;
   }
   .section {
     padding-top: 60px;
     padding-bottom: 60px;
   }
-  .div-normal {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
+  .tab-navbutton {
+    width: 100%;
+  }
+  .banner-paragraph {
+    font-size: 16px;
+  }
+  .h2 {
+    font-size: 20px;
+  }
+  .text-box {
+    padding-top: 40px;
+  }
+  .card-title {
+    font-size: 18px;
+  }
+  .mobile-v {
     flex-direction: column;
   }
-  .image-right-gap {
-    max-width: 100%;
-    margin-right: 0px;
+  .component-title {
+    font-size: 18px;
   }
-  .image-left-gap {
-    height: auto;
-    margin-left: 0px;
+  .label {
+    font-size: 14px;
   }
-}
-
-@media (max-width: 479px) {
-  .subtitle {
-    padding-top: 60px;
-    font-size: 16px;
-  }
-  .hp-banner-title {
-    font-size: 28px;
-    line-height: 48px;
-  }
-  .hp-banner-paragraph {
-    width: 100%;
-    font-size: 16px;
-    line-height: 150%;
-  }
-  .banner-img-homepage {
-    display: none;
-  }
-
-  .container.noedge {
-    padding-right: 0%;
-    padding-left: 0%;
-  }
-
-  .about-banner {
-    margin-bottom: 40px;
-    padding-top: 120px;
-    overflow: auto;
-  }
-  .page-title {
-    font-size: 20px;
-  }
-  .shadow-title {
-    top: -12px;
-    font-size: 30px;
-  }
-  .normal-text {
-    max-width: 100%;
-    font-size: 1em;
-  }
-  .normal-text.page-banner-text {
-    font-size: 16px;
-  }
-  .normal-text.halfway-paragraph {
-    font-size: 1em;
-  }
-  .img-banner {
-    position: absolute;
-    top: -40px;
-    right: -20px;
-    width: auto;
-    max-height: 240px;
-    max-width: none;
-  }
-  .img-banner.about-banner-pic {
-    max-height: none;
-  }
-  .image-5 {
-    max-width: 40%;
-  }
-
-  .container {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: center;
-  }
-
-  .flex-horizontal-container-right {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: left;
-  }
-
-  .flex-horizontal-container-spaced {
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-  }
-
-  .team-img {
-    position: relative;
-    top: -40px;
-    right: -20px;
-    width: auto;
-    max-height: 240px;
-    max-width: none;
-  }
-  .shadow-title-right {
-    top: -12px;
-    font-size: 30px;
-  }
-  .section-title-right {
-    font-size: 20px;
-  }
-  .normal-text-right {
-    max-width: 100%;
-    font-size: 1em;
-  }
-  .div-centered-h {
-    font-size: 1em;
-  }
-  .div-centered-h.insights-item {
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-  .card.card-style1 {
-    padding-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-  .card-icon {
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    -ms-grid-row-align: auto;
-    align-self: auto;
-  }
-  .section {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    font-size: 1em;
-    line-height: 1em;
-  }
-  .div-block-2 {
-    max-width: 90%;
-  }
-  .quote {
-    display: none;
-  }
-  .image-right-gap.larger-pic {
-    height: auto;
-    max-width: 100%;
-  }
-  .image-left-gap.large-pic {
-    height: 200px;
-    margin-left: 0px;
+  .h3 {
+    font-size: 18px;
   }
 }
