--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -121,6 +121,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 80px 0 60px 0;
+  width: 100%;
 }
 
 .gallery {
@@ -718,6 +719,10 @@ button:focus {outline:0;}
 
 .arrow-text-ipad {
   display: none;
+}
+
+.carousel {
+  width: 100%;
 }
 
 ul {
