Images and text updated in ideation page, some small bug fixes and changes in other pages (like about page)

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -142,6 +142,15 @@ body {
 .container.center {
   align-items: center;
 }
+
+.container.left {
+  align-items: left;
+}
+
+.container.right {
+  align-items: flex-start;
+}
+
 .even-wrapper{
   display: flex;
 }
@@ -429,6 +438,7 @@ body {
   justify-content: flex-start;
   flex-shrink: 0;
   margin-bottom: 20px;
+  border-radius: 50%;
 }
 .quote-bubble {
   padding: 2%;
