--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -24,9 +24,6 @@ body {
   background-color: white;
 }
 
-.tablet-phone {
-  display: none;
-}
 /*components*/
 .button-solid {
   padding: .3em;
@@ -134,6 +131,7 @@ body {
 .gallery {
   flex-wrap: wrap;
   justify-content: space-around;
+  width: 100%;
 }
 
 .container {
@@ -319,6 +317,9 @@ body {
 .blog-img {
   background-color: #999;
   height: 200px;
+  width: 275px;
+  /*clip: rect(0px,200px,275px,0px);*/
+  overflow: hidden;
 }
 .blog-descript-info {
   width: 250px;
@@ -476,7 +477,7 @@ body {
   /*text-align: left;*/
 }
 .small-purple-section {
-  width: 30%;
+  width: 50%;
   max-width: 300px;
   padding-left: 20px;
 }
@@ -762,6 +763,10 @@ button:focus {outline:0;}
 
 ul {
   padding-left: 15px;
+}
+
+.tablet-phone {
+  display: none;
 }
 
 @media (max-width: 991px) {
