--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -110,7 +110,9 @@ body {
 .card-title {
   font-size: var(--h3);
   font-weight: 600;
-  line-height: 3em;
+  /*line-height: 3em;*/
+  padding: 1em 15px 15px;
+  padding-left: 0px;
 }
 
 .icon {
@@ -181,6 +183,10 @@ body {
 .smaller-section {
   margin: 30px 0;
 }
+.persona-section {
+  margin: 0px;
+}
+
 .space-above {
   margin-top: 30px;
 }
@@ -455,7 +461,17 @@ body {
   border-radius: 50%;
 }
 .quote-bubble {
-  margin: 30px 0;
+  /*margin: 30px 0;*/
+  width: 100%;
+  padding: 2%;
+  border-radius: 6px;
+  background-color: var(--color-bg-light-purple);
+}
+.quote.b3 {
+  margin-bottom: 10px;
+}
+.persona-text {
+  /*margin: 30px 0;*/
   padding: 2%;
   border-radius: 6px;
   background-color: var(--color-bg-light-purple);
