--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -84,7 +84,7 @@ body {
 }
 .card-icon {
   width: 50px;
-  height: 50px;
+  /*height: 50px;*/
   margin: 0 30px 0 10px;
   align-self: flex-start;
   flex-grow: 0;
