Home page and research page written content finalized

--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -495,7 +495,7 @@ body {
   /*text-align: left;*/
 }
 .small-purple-section {
-  width: 50%;
+  width: 100%;
   max-width: 300px;
   padding-left: 20px;
 }
@@ -507,6 +507,7 @@ body {
 }
 .person-link {
   width: 30px;
+  height: 30px;
 }
 
 /* slideshow */
