--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -516,6 +516,8 @@ body {
   position: relative;
   width: 100%;
   margin: 20px 0;
+  text-align: center;
+  background-color: #eeeeee;
 }
 .expand-icon{
   width: 24px;
@@ -672,11 +674,16 @@ button:focus {outline:0;}
   display: block;
 }
 .tab-cover-image{
-  width: 100%;
-  margin-bottom: 25px;
-  cursor: pointer;
-  transition: 0.3s;
-  object-fit: cover;
+    height: 400px;
+    width: 90%;
+    cursor: pointer;
+    transition: 0.3s;
+    object-fit: contain;
+    margin-top: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 25px;
+    text-align: center;
 }
 .tab-cover-image:hover{
   opacity: 0.7;
@@ -795,6 +802,12 @@ ul {
 }
 
 @media (max-width: 991px) {
+  .slideshow-img-wrapper{
+    position: relative;
+    width: 100%;
+    margin: 20px 0;
+}
+
   .image.right {
     display: none;
   }
@@ -910,7 +923,7 @@ ul {
   }
 
   .smaller-section {
-    margin-top: 0px;
+    margin-top: 15px;
   }
 
   .hline {
@@ -936,6 +949,14 @@ ul {
 
   .tab-cover-image {
     margin-bottom: 20px;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    width: 100%;
+    text-align: center;
   }
 
   .card-style1 {
