--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -416,6 +416,9 @@ body {
 .shadowed {
   margin-left: -10px;
 }
+.image.bordered {
+  border: 1px #e7e7e7 solid;
+}
 .img-button {
   height: 3.5em;
   width: auto;
@@ -826,7 +829,7 @@ ul {
     width: 150px;
     height: 150px;
   }
-  
+
   .hp-img-tablet {
     display: block;
   }
