--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -726,6 +726,9 @@ button:focus {outline:0;}
 .tab-bullet.blue li::before{
   color: #3420AD;
 }
+.tab-bullet.purple li::before{
+  color: var(--color-light-purple);
+}
 
 /*inpage nav*/
 .inpage-nav {
