--- a/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
+++ b/5cc9c2f4e0becab92b6f851032e11261c3f58848/css/shared.css
@@ -180,6 +180,10 @@ body {
   justify-content: space-between;
   align-items: flex-start;
 }
+.glossary {
+  width: 20%;
+  height: 200px;
+}
 .smaller-section {
   margin: 30px 0;
 }
